...
                android:textAlignment="center"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_color"
                android:textColor="@color/button_text_color"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/viewWaitlistButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Waitlist"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_color"
                android:textColor="@color/button_text_color"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/viewInvitedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Invited"
                android:textSize="16sp"
                android:textAlignment="center"
                android:background="@drawable/button_color"
                android:textColor="@color/button_text_color"
                android:layout_marginBottom="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/viewAttendeesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Attendees"
                android:textSize="16sp"
                android:textAlignment="center"
                android:background="@drawable/button_color"
                android:textColor="@color/button_text_color"
                android:layout_marginBottom="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/viewCancelledButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Cancelled"
                android:textSize="16sp"
                android:textAlignment="center"
                android:background="@drawable/button_color"
                android:textColor="@color/button_text_color"
                android:layout_marginBottom="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/viewDeclinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Declined"
                android:textSize="16sp"
                android:textAlignment="center"
                android:background="@drawable/button_color"
                android:textColor="@color/button_text_color"
                android:layout_marginBottom="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/runLotteryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Run Lottery"
                android:textSize="16sp"
                android:textAlignment="center"
                android:background="@drawable/button_color"
                android:textColor="@color/button_text_color"
                android:layout_marginBottom="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/exportAttendeesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Export Attendees CSV"
                android:textSize="16sp"
                android:textAlignment="center"
                android:background="@drawable/button_color"
                android:textColor="@color/button_text_color"
                android:layout_marginBottom="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/organizerEventDescriptionBackButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Back"
                android:textSize="16sp"
                android:textAlignment="center"
                android:background="@drawable/button_color"
...
