...
                android:textColor="@color/button_text_color"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Event list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/HostEventView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp" />
...
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create+"
            android:textAllCaps="false"
            android:layout_marginEnd="12dp"
            android:background="@drawable/button_color"
            android:textColor="@color/button_text_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notify"
            android:textAllCaps="false"
            android:background="@drawable/button_color"
            android:textColor="@color/button_text_color" />
...
            android:textAllCaps="false"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_color"
            android:textColor="@color/button_text_color"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonMyProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="My Profile"
            android:textAllCaps="false"
            android:layout_marginStart="8dp"
...
